# parser_app

./: pyproject.toml  readme.md  requirements_dev.txt  setup.cfg
.github/workflows/: tests.yml
app/: parser_app.py
app/templates/: index.html
src/: log
src/parser_app/: parser_app.py
src/parser_app/templates/: base.html
tests/: test_parser.py
