[metadata]
name = parser_app
description = parser web app
author = Philip Beeby
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages =
    parser_app
install_requires = 
click>=8.1.3 
Flask>=2.2.3 
importlib-metadata>=6.3.0
itsdangerous>=2.1.2
Jinja2>=3.1.2
MarkupSafe>=2.1.2
Werkzeug>=2.2.3
zipp>=3.15.0
   
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
  
[options.package_data]
parser_app = py.typed

[flake8]
max-line-length = 160